--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "format:fix": "prettier --write .",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "allure:serve": "allure serve allure-results"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,8 @@
     "@eslint/js": "^9.9.0",
     "@playwright/test": "^1.54.2",
     "@types/node": "^24.2.1",
+    "allure-commandline": "^2.29.0",
+    "allure-playwright": "^3.0.0",
     "dotenv": "^16.6.1",
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
